# TP4_GeometryShader

./: CMakeLists.txt  README.md
Culling/: CMakeLists.txt
Culling/data/: cat.tga
Culling/lib/: matrix.h  quaternion.h
Culling/shader/: normal.geom  shader.vert
Culling/src/: gl-utils.cc  main.cc  tga.cc  trackball.h
DebugNormal/: CMakeLists.txt
DebugNormal/lib/: quaternion.cc  vec4.h
DebugNormal/shader/: normal.frag  normal.geom  normal.vert
DebugNormal/src/: gl-utils.h  image.h  main.cc  trackball.cc
Splitting/: CMakeLists.txt
Splitting/lib/: matrix.cc  vec2.h  vec3.h
Splitting/shader/: normal.frag  normal.geom  normal.vert  shader.frag
Splitting/src/: main.cc
